# cyRiderDebugCli

./: .gitignore  LICENSE  README.md  install_plugin.py  pyproject.toml
.github/workflows/: ci.yml
openspec/: config.yaml
openspec/changes/rider-debug-mcp/: design.md  proposal.md  tasks.md
openspec/changes/rider-debug-mcp/specs/ci-pipeline/: spec.md
openspec/changes/rider-debug-mcp/specs/crash-analyzer/: spec.md
openspec/changes/rider-debug-mcp/specs/mcp-server/: spec.md
openspec/changes/rider-debug-mcp/specs/middleware-analysis/: spec.md
openspec/changes/rider-debug-mcp/specs/rider-gateway/: spec.md
rider-plugin/: README.md  build.gradle.kts  settings.gradle.kts
rider-plugin/src/main/java/com/cyriderdebug/mcp/: DebugBridgeHandler.java
rider-plugin/src/main/kotlin/com/cyriderdebug/api/: DebugApiHandler.kt
rider-plugin/src/main/kotlin/com/cyriderdebug/mcp/: DebugBridgeHandler.kt
src/rider_debug_mcp/: __init__.py  __main__.py  server.py
src/rider_debug_mcp/analysis/: __init__.py  crash.py  models.py  report.py
src/rider_debug_mcp/gateway/: __init__.py  client.py  events.py  models.py
src/rider_debug_mcp/handlers/: __init__.py  analysis.py  breakpoint.py  debug.py  inspect.py
src/rider_debug_mcp/middleware/: __init__.py  help.py  models.py  parser.py  router.py  session.py
tests/: conftest.py  test_analysis.py  test_events.py  test_gateway.py  test_handlers.py  test_models.py  test_parser.py  test_router.py  test_server.py  test_session.py
