[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rider-debug-mcp"
version = "0.1.0"
description = "MCP server for JetBrains Rider debugger integration - breakpoint management, debug control, and crash analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "cyRiderDebugCli" },
]
keywords = ["mcp", "rider", "debugger", "jetbrains", "dotnet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Debuggers",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rider_debug_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file (events.py has imports after union type)
    "TCH001", # move import into type-checking block (false positive with runtime usage)
    "TC001",  # same as TCH001
    "UP042",  # use StrEnum (keep str+Enum for broader compatibility)
    "SIM105", # use contextlib.suppress (less readable for async)
    "B905",   # zip strict parameter (not needed here)
    "B007",   # unused loop variable
]

[tool.ruff.lint.isort]
known-first-party = ["rider_debug_mcp"]

[tool.coverage.run]
source = ["rider_debug_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
